content/sensu-enterprise-dashboard/2.15/changelog.md
---
title: "CHANGELOG"
description: "Release notes for Sensu Enterprise Dashboard"
product: "Sensu Enterprise Dashboard"
version: "2.15"
menu: "sensu-enterprise-dashboard-2.15"
---

_NOTE: Sensu Enterprise Dashboard is built on Uchiwa. Uchiwa changes are documented in the [Uchiwa changelog][uchiwa-changelog]._

## Releases

- [Enterprise Dashboard 2.15.0 Release Notes](#enterprise-dashboard-v2-15-0)
- [Enterprise Dashboard 2.14.0 Release Notes](#enterprise-dashboard-v2-14-0)
- [Enterprise Dashboard 2.13.2 Release Notes](#enterprise-dashboard-v2-13-2)
- [Enterprise Dashboard 2.13.1 Release Notes](#enterprise-dashboard-v2-13-1)
- [Enterprise Dashboard 2.13.0 Release Notes](#enterprise-dashboard-v2-13-0)
- [Enterprise Dashboard 2.12.0 Release Notes](#enterprise-dashboard-v2-12-0)
- [Enterprise Dashboard 2.11.2 Release Notes](#enterprise-dashboard-v2-11-2)
- [Enterprise Dashboard 2.11.1 Release Notes](#enterprise-dashboard-v2-11-1)
- [Enterprise Dashboard 2.11.0 Release Notes](#enterprise-dashboard-v2-11-0)
- [Enterprise Dashboard 2.10.1 Release Notes](#enterprise-dashboard-v2-10-1)
- [Enterprise Dashboard 2.10.0 Release Notes](#enterprise-dashboard-v2-10-0)
- [Enterprise Dashboard 2.9.0 Release Notes](#enterprise-dashboard-v2-9-0)
- [Enterprise Dashboard 2.8.1 Release Notes](#enterprise-dashboard-v2-8-1)
- [Enterprise Dashboard 2.8.0 Release Notes](#enterprise-dashboard-v2-8-0)
- [Enterprise Dashboard 2.7.0 Release Notes](#enterprise-dashboard-v2-7-0)
- [Enterprise Dashboard 2.6.0 Release Notes](#enterprise-dashboard-v2-6-0)
- [Enterprise Dashboard 2.5.0 Release Notes](#enterprise-dashboard-v2-5-0)
- [Enterprise Dashboard 2.4.0 Release Notes](#enterprise-dashboard-v2-4-0)
- [Enterprise Dashboard 2.3.0 Release Notes](#enterprise-dashboard-v2-3-0)
- [Enterprise Dashboard 2.2.1 Release Notes](#enterprise-dashboard-v2-2-1)
- [Enterprise Dashboard 2.2.0 Release Notes](#enterprise-dashboard-v2-2-0)
- [Enterprise Dashboard 2.1.1 Release Notes](#enterprise-dashboard-v2-1-1)
- [Enterprise Dashboard 2.1.0 Release Notes](#enterprise-dashboard-v2-1-0)
- [Enterprise Dashboard 2.0.0 Release Notes](#enterprise-dashboard-v2-0-0)
- [Enterprise Dashboard 1.12.0 Release Notes](#enterprise-dashboard-v1-12-0)
- [Enterprise Dashboard 1.11.0 Release Notes](#enterprise-dashboard-v1-11-0)
- [Enterprise Dashboard 1.10.1 Release Notes](#enterprise-dashboard-v1-10-1)
- [Enterprise Dashboard 1.10.0 Release Notes](#enterprise-dashboard-v1-10-0)
- [Enterprise Dashboard 1.9.8 Release Notes](#enterprise-dashboard-v1-9-8)
- [Enterprise Dashboard 1.9.7 Release Notes](#enterprise-dashboard-v1-9-7)
- [Enterprise Dashboard 1.9.6 Release Notes](#enterprise-dashboard-v1-9-6)
- [Enterprise Dashboard 1.9.5 Release Notes](#enterprise-dashboard-v1-9-5)
- [Enterprise Dashboard 1.9.4 Release Notes](#enterprise-dashboard-v1-9-4)
- [Enterprise Dashboard 1.9.3 Release Notes](#enterprise-dashboard-v1-9-3)
- [Enterprise Dashboard 1.9.2 Release Notes](#enterprise-dashboard-v1-9-2)
- [Enterprise Dashboard 1.9.1 Release Notes](#enterprise-dashboard-v1-9-1)
- [Enterprise Dashboard 1.9.0 Release Notes](#enterprise-dashboard-v1-9-0)
- [Enterprise Dashboard 1.8.0 Release Notes](#enterprise-dashboard-v1-8-0)
- [Enterprise Dashboard 1.7.0 Release Notes](#enterprise-dashboard-v1-7-0)
- [Enterprise Dashboard 1.6.2 Release Notes](#enterprise-dashboard-v1-6-2)
- [Enterprise Dashboard 1.6.1 Release Notes](#enterprise-dashboard-v1-6-1)
- [Enterprise Dashboard 1.6.0 Release Notes](#enterprise-dashboard-v1-6-0)
- [Enterprise Dashboard 1.5.1 Release Notes](#enterprise-dashboard-v1-5-1)
- [Enterprise Dashboard 1.5.0 Release Notes](#enterprise-dashboard-v1-5-0)
- [Enterprise Dashboard 1.4.6 Release Notes](#enterprise-dashboard-v1-4-6)
- [Enterprise Dashboard 1.4.5 Release Notes](#enterprise-dashboard-v1-4-5)
- [Enterprise Dashboard 1.4.4 Release Notes](#enterprise-dashboard-v1-4-4)
- [Enterprise Dashboard 1.4.3 Release Notes](#enterprise-dashboard-v1-4-3)
- [Enterprise Dashboard 1.4.2 Release Notes](#enterprise-dashboard-v1-4-2)
- [Enterprise Dashboard 1.4.1 Release Notes](#enterprise-dashboard-v1-4-1)
- [Enterprise Dashboard 1.4.0 Release Notes](#enterprise-dashboard-v1-4-0)
- [Enterprise Dashboard 1.3.0 Release Notes](#enterprise-dashboard-v1-3-0)
- [Enterprise Dashboard 1.2.1 Release Notes](#enterprise-dashboard-v1-2-1)
- [Enterprise Dashboard 1.2.0 Release Notes](#enterprise-dashboard-v1-2-0)
- [Enterprise Dashboard 1.1.1 Release Notes](#enterprise-dashboard-v1-1-1)
- [Enterprise Dashboard 1.1.0 Release Notes](#enterprise-dashboard-v1-1-0)
- [Enterprise Dashboard 1.0.0 Release Notes](#enterprise-dashboard-v1-0-0)
- [Enterprise Dashboard 0.1.5 Release Notes](#enterprise-dashboard-v0-1-5)
- [Enterprise Dashboard 0.1.3 Release Notes](#enterprise-dashboard-v0-1-3)
- [Enterprise Dashboard 0.1.2 Release Notes](#enterprise-dashboard-v0-1-2)
- [Enterprise Dashboard 0.1.1 Release Notes](#enterprise-dashboard-v0-1-1)
- [Enterprise Dashboard 0.1.0 Release Notes](#enterprise-dashboard-v0-1-0)

## Enterprise Dashboard 2.15.0 Release Notes {#enterprise-dashboard-v2-15-0}
**March 5, 2019** &mdash; Sensu Enterprise Dashboard version 2.15.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-15-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 1.6.0][uchiwa-v1-6-0].

- **FIX**: The NOT operator now filters events correctly when used at the beginning of a query and in conjunction with a check name.

## Enterprise Dashboard 2.14.0 Release Notes {#enterprise-dashboard-v2-14-0}
**January 2, 2019** &mdash; Sensu Enterprise Dashboard version 2.14.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-14-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 1.5.0][uchiwa-v1-5-0].

## Enterprise Dashboard 2.13.2 Release Notes {#enterprise-dashboard-v2-13-2}
**December 18, 2018** &mdash; Sensu Enterprise Dashboard version 2.13.2 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-13-2-changes}

- **FIX**: Resolved build dependencies.

## Enterprise Dashboard 2.13.1 Release Notes {#enterprise-dashboard-v2-13-1}
**December 18, 2018** &mdash; Sensu Enterprise Dashboard version 2.13.3 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-13-1-changes}

- **FIX**: Resolved build dependencies.

## Enterprise Dashboard 2.13.0 Release Notes {#enterprise-dashboard-v2-13-0}
**December 18, 2018** &mdash; Sensu Enterprise Dashboard version 2.13.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-13-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 1.4.1][uchiwa-v1-4-1].
- **FIX**: Dashboard search now correctly queries for `source`.

## Enterprise Dashboard 2.12.0 Release Notes {#enterprise-dashboard-v2-12-0}
**June 12, 2018** &mdash; Sensu Enterprise Dashboard version 2.12.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-12-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 1.3.1][uchiwa-v1-3-1].

## Enterprise Dashboard 2.11.2 Release Notes {#enterprise-dashboard-v2-11-2}
**January 10, 2018** &mdash; Sensu Enterprise Dashboard version 2.11.2 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-11-2-changes}

- **IMPROVEMENT**: Built on [Uchiwa 1.1.1][uchiwa-v1-1-1].

## Enterprise Dashboard 2.11.1 Release Notes {#enterprise-dashboard-v2-11-1}
**January 9, 2018** &mdash; Sensu Enterprise Dashboard version 2.11.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-11-1-changes}

- **FIX**: Properly display Sensu Enterprise version in the info view.

## Enterprise Dashboard 2.11.0 Release Notes {#enterprise-dashboard-v2-11-0}
**December 18, 2017** &mdash; Sensu Enterprise Dashboard version 2.11.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-11-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 1.1.0][uchiwa-v1-1-0].

## Enterprise Dashboard 2.10.2 Release Notes {#enterprise-dashboard-v2-10-2}
**October 5, 2017** &mdash; Sensu Enterprise Dashboard version 2.10.2 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-10-2-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.26.3][uchiwa-v0-26-3].

## Enterprise Dashboard 2.10.1 Release Notes {#enterprise-dashboard-v2-10-1}
**September 29, 2017** &mdash; Sensu Enterprise Dashboard version 2.10.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-10-1-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.26.2][uchiwa-v0-26-2].

## Enterprise Dashboard 2.10.0 Release Notes {#enterprise-dashboard-v2-10-0}
**September 29, 2017** &mdash; Sensu Enterprise Dashboard version 2.10.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-10-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.26.1][uchiwa-v0-26-1].

- **FIX**: Properly display keepalives events with RBAC. Uses the client's subscriptions if a check's subscribers is empty (e.g. keepalive event).

## Enterprise Dashboard 2.9.0 Release Notes {#enterprise-dashboard-v2-9-0}
**July 26, 2017** &mdash; Sensu Enterprise Dashboard version 2.9.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-9-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.25.3][uchiwa-v0-25-3].

- **IMPROVEMENT**: Added RBAC intergration for Okta (oauth2).

- **IMPROVEMENT**: Added regex support for arrays in collections.

- **FIX**: Changed RBAC intergration for GitHub from repo to org.

## Enterprise Dashboard 2.8.1 Release Notes {#enterprise-dashboard-v2-8-1}
**May 16, 2017** &mdash; Sensu Enterprise Dashboard version 2.8.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-8-1-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.25.2][uchiwa-v0-25-2].

- **IMPROVEMENT**: Properly display keepalives events with RBAC. Uses the client's subscriptions if a check's subscribers is empty (e.g. keepalive event).

## Enterprise Dashboard 2.8.0 Release Notes {#enterprise-dashboard-v2-8-0}
**May 10, 2017** &mdash; Sensu Enterprise Dashboard version 2.8.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-8-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.25.1][uchiwa-v0-25-1].

- **FIX**: Fix RBAC subscription filtering

## Enterprise Dashboard 2.7.0 Release Notes {#enterprise-dashboard-v2-7-0}
**April 13, 2017** &mdash; Sensu Enterprise Dashboard version 2.7.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-7-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.24.0][uchiwa-v0-24-0].

## Enterprise Dashboard 2.6.0 Release Notes {#enterprise-dashboard-v2-6-0}
**April 4, 2017** &mdash; Sensu Enterprise Dashboard version 2.6.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-6-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.23.1][uchiwa-v0-23-1].

- **IMPROVEMENT**: Added support for authentication against multiple LDAP servers.

## Enterprise Dashboard 2.5.0 Release Notes {#enterprise-dashboard-v2-5-0}
**April 4, 2017** &mdash; Sensu Enterprise Dashboard version 2.5.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-5-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.23.0][uchiwa-v0-23-0].

- **IMPROVEMENT**: Added support for boolean values in collections queries.

## Enterprise Dashboard 2.4.0 Release Notes {#enterprise-dashboard-v2-4-0}
**March 13, 2017** &mdash; Sensu Enterprise Dashboard version 2.4.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-4-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.22.2][uchiwa-v0-22-2].

- **BUGFIX**: Fix issue with HUD results graph.

- **BUGFIX**: Fix issue with audit logging not writing to file.

- **IMPROVEMENT**: Added OpenID Connect authentication.

- **IMPROVEMENT**: Switched CI from Drone to Travis CI. 

## Enterprise Dashboard 2.3.0 Release Notes {#enterprise-dashboard-v2-3-0}
**February 13, 2017** &mdash; Sensu Enterprise Dashboard version 2.3.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-3-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.22.1][uchiwa-v0-22-1].

- **IMPROVEMENT**: Added DisableNestedGroups attribute to LDAP driver

## Enterprise Dashboard 2.2.1 Release Notes {#enterprise-dashboard-v2-2-1}
**December 15, 2016** &mdash; Sensu Enterprise Dashboard version 2.2.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-2-1-changes}

- **IMPROVEMENT**: Properly escape values in search queries for the LDAP authentication driver.

## Enterprise Dashboard 2.2.0 Release Notes {#enterprise-dashboard-v2-2-0}
**December 8, 2016** &mdash; Sensu Enterprise Dashboard version 2.2.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-2-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.21.0][uchiwa-v0-21-0].

## Enterprise Dashboard 2.1.1 Release Notes {#enterprise-dashboard-v2-1-1}
**November 30, 2016** &mdash; Sensu Enterprise Dashboard version 2.1.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-1-1-changes}

- **FIX**: Fixed OAuth authentication providers.

## Enterprise Dashboard 2.1.0 Release Notes {#enterprise-dashboard-v2-1-0}
**November 22, 2016** &mdash; Sensu Enterprise Dashboard version 2.1.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-1-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.20.2][uchiwa-v0-20-2].

- **IMPROVEMENT**: Add diagnostic information to the authentication drivers when a role has no members.

## Enterprise Dashboard 2.0.0 Release Notes {#enterprise-dashboard-v2-0-0}
**October 17, 2016** &mdash; Sensu Enterprise Dashboard version 2.0.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v2-0-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.19.0][uchiwa-v0-19-0].

- **IMPROVEMENT**: Add support for Sensu Enterprise 2.0.0

- **FIX**: Fix the clear button for collections

## Enterprise Dashboard 1.12.0 Release Notes {#enterprise-dashboard-v1-12-0}
**August 3, 2016** &mdash; Sensu Enterprise Dashboard version 1.12.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-12-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.17.1][uchiwa-v0-17-1].

- **IMPROVEMENT**: Upgraded to Go 1.6

- **IMPROVEMENT**: Added finer RBAC granularity

## Enterprise Dashboard 1.11.0 Release Notes {#enterprise-dashboard-v1-11-0}
**July 26, 2016** &mdash; Sensu Enterprise Dashboard version 1.11.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-11-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.17.0][uchiwa-v0-17-0].

- **IMPROVEMENT**: Added API token-based authentication.

## Enterprise Dashboard 1.10.1 Release Notes {#enterprise-dashboard-v1-10-1}
**July 15, 2016** &mdash; Sensu Enterprise Dashboard version 1.10.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-10-1-changes}

- **FIX**: Fixed graphs scaling issues on back button to the HUD

## Enterprise Dashboard 1.10.0 Release Notes {#enterprise-dashboard-v1-10-0}
**July 6, 2016** &mdash; Sensu Enterprise Dashboard version 1.10.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-10-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.16.0][uchiwa-v0-16-0].

- **IMPROVEMENT**: Added additional debug option for LDAP driver

- **FIX**: Fixed graphs display issues on back button to the HUD

## Enterprise Dashboard 1.9.8 Release Notes {#enterprise-dashboard-v1-9-8}
**June 7, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.8 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-8-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.15.0][uchiwa-v0-15-0].

- **IMPROVEMENT**: Added support for LDAP dialects

- **IMPROVEMENT**: Added support for aggregates in SE 1.13

## Enterprise Dashboard 1.9.7 Release Notes {#enterprise-dashboard-v1-9-7}
**May 25, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.7 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-7-changes}

- **FIX**: Prevented exceptions on the HUD when metric series are empty

## Enterprise Dashboard 1.9.6 Release Notes {#enterprise-dashboard-v1-9-6}
**May 25, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.6 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-6-changes}

- **FIX**: Prevent exceptions on the HUD when metric series are invalid.

## Enterprise Dashboard 1.9.5 Release Notes {#enterprise-dashboard-v1-9-5}
**April 21, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.5 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-5-changes}

- **IMPROVEMENT**: Added support for IPv6 addresses in LDAP driver.

## Enterprise Dashboard 1.9.4 Release Notes {#enterprise-dashboard-v1-9-4}
**March 3, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.4 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-4-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.14.3][uchiwa-v0-14-3].

## Enterprise Dashboard 1.9.3 Release Notes {#enterprise-dashboard-v1-9-3}
**February 23, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.3 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-3-changes}

- **BUGFIX**: Better handling of an empty recursive group search result in LDAP authentication driver.

## Enterprise Dashboard 1.9.2 Release Notes {#enterprise-dashboard-v1-9-2}
**February 19, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.2 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-2-changes}

- **IMPROVEMENT**: Use the 'memberOf' attribute in AD for role assignation, in addition to the recursive query.

## Enterprise Dashboard 1.9.1 Release Notes {#enterprise-dashboard-v1-9-1}
**February 8, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-1-changes}

- **BUGFIX**: Prevent a fatal panic when one of the SE metrics is empty.

## Enterprise Dashboard 1.9.0 Release Notes {#enterprise-dashboard-v1-9-0}
**February 2, 2016** &mdash; Sensu Enterprise Dashboard version 1.9.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-9-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.14.2][uchiwa-v0-14-2].

- **IMPROVEMENT**: Added support for nested groups in AD.

## Enterprise Dashboard 1.8.0 Release Notes {#enterprise-dashboard-v1-8-0}
**January 19, 2016** &mdash; Sensu Enterprise Dashboard version 1.8.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-8-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.14.1][uchiwa-v0-14-1].

- **IMPROVEMENT**: Added support for a fallback RBAC role.

- **IMPROVEMENT**: Added HUD styling tweaks.

- **IMPROVEMENT**: Added the Gitlab RBAC authentication driver.

- **IMPROVEMENT**: Improved debug mode.

## Enterprise Dashboard 1.7.0 Release Notes {#enterprise-dashboard-v1-7-0}
**November 30, 2015** &mdash; Sensu Enterprise Dashboard version 1.7.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-7-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.13.0][uchiwa-v0-13-0].

- **IMPROVEMENT**: HUD now uses the new SE metrics.

- **IMPROVEMENT**: LDAP driver is case-insensitive but case-preserving.

## Enterprise Dashboard 1.6.2 Release Notes {#enterprise-dashboard-v1-6-2}
**November 6, 2015** &mdash; Sensu Enterprise Dashboard version 1.6.2 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-6-2-changes}

- **IMPROVEMENT**: Removed async.js dependency.

- **IMPROVEMENT**: Updated sensu-enterprise theme CSS files.

## Enterprise Dashboard 1.6.1 Release Notes {#enterprise-dashboard-v1-6-1}
**November 6, 2015** &mdash; Sensu Enterprise Dashboard version 1.6.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-6-1-changes}

- **IMPROVEMENT**: Upgraded uchiwa-web bower package.

## Enterprise Dashboard 1.6.0 Release Notes {#enterprise-dashboard-v1-6-0}
**November 6, 2015** &mdash; Sensu Enterprise Dashboard version 1.6.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-6-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.12.1][uchiwa-v0-12-1].

- **IMPROVEMENT**: Rename the dashboard view to HUD.

## Enterprise Dashboard 1.5.1 Release Notes {#enterprise-dashboard-v1-5-1}
**October 6, 2015** &mdash; Sensu Enterprise Dashboard version 1.5.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-5-1-changes}

- **FIX**: Use proper uchiwa-web bocker package.

## Enterprise Dashboard 1.5.0 Release Notes {#enterprise-dashboard-v1-5-0}
**October 6, 2015** &mdash; Sensu Enterprise Dashboard version 1.5.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-5-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.11.2][uchiwa-v0-11-2].

- **IMPROVEMENT**: Deprecate use of /results Sensu API endpoint.

## Enterprise Dashboard 1.4.6 Release Notes {#enterprise-dashboard-v1-4-6}
**September 29, 2015** &mdash; Sensu Enterprise Dashboard version 1.4.6 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-4-6-changes}

- **FIX**: Revert change until uchiwa is upgraded.

## Enterprise Dashboard 1.4.5 Release Notes {#enterprise-dashboard-v1-4-5}
**September 29, 2015** &mdash; Sensu Enterprise Dashboard version 1.4.5 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-4-5-changes}

- **IMPROVEMENT**: Use enterprise filters for the dashboard.

## Enterprise Dashboard 1.4.4 Release Notes {#enterprise-dashboard-v1-4-4}
**September 11, 2015** &mdash; Sensu Enterprise Dashboard version 1.4.4 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-4-4-changes}

- **FIX**: Hide sensitive LDAP information (bindpass) in dashboard.

- **IMPROVEMENT**: Updated dashboard widgets text.

- **FIX**: Stepped Y axis max value in dashboard graphs.

## Enterprise Dashboard 1.4.3 Release Notes {#enterprise-dashboard-v1-4-3}
**September 10, 2015** &mdash; Sensu Enterprise Dashboard version 1.4.3 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-4-3-changes}

- **IMPROVEMENT**: Allow customizable group and user BaseDN for LDAP driver.

## Enterprise Dashboard 1.4.2 Release Notes {#enterprise-dashboard-v1-4-2}
**September 10, 2015** &mdash; Sensu Enterprise Dashboard version 1.4.2 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-4-2-changes}

- **IMPROVEMENT**: Allow customizable Group Membership Attribute for LDAP driver.

## Enterprise Dashboard 1.4.1 Release Notes {#enterprise-dashboard-v1-4-1}
**September 8, 2015** &mdash; Sensu Enterprise Dashboard version 1.4.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-4-1-changes}

- **IMPROVEMENT**: Allow customizable group and user object class for LDAP driver.

## Enterprise Dashboard 1.4.0 Release Notes {#enterprise-dashboard-v1-4-0}
**September 1, 2015** &mdash; Sensu Enterprise Dashboard version 1.4.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-4-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.10.4][uchiwa-v0-10-4].

- **IMPROVEMENT**: Added support for OpenLDAP.

- **IMPROVEMENT**: Send failed logon to audit logging.

- **IMPROVEMENT**: Update dashboard widgets text.

## Enterprise Dashboard 1.3.0 Release Notes {#enterprise-dashboard-v1-3-0}
**August 3, 2015** &mdash; Sensu Enterprise Dashboard version 1.3.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-3-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.10.3][uchiwa-v0-10-3].

- **IMPROVEMENT**: Added audit logging.

- **IMPROVEMENT**: Added dashboard.

## Enterprise Dashboard 1.2.1 Release Notes {#enterprise-dashboard-v1-2-1}
**June 19, 2015** &mdash; Sensu Enterprise Dashboard version 1.2.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-2-1-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.9.1][uchiwa-v0-9-1].

- **FIX**: Use proper path for godep when building binaries.

## Enterprise Dashboard 1.2.0 Release Notes {#enterprise-dashboard-v1-2-0}
**June 12, 2015** &mdash; Sensu Enterprise Dashboard version 1.2.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-2-0-changes}

- **IMPROVEMENT**: Use godep for dependencies vendoring.

- **IMPROVEMENT**: Add support for user-defined roles.

- **IMPROVEMENT**: Add support for Github Enterprise.

- **IMPROVEMENT**: LDAP driver support for disabling SSL verification.

## Enterprise Dashboard 1.1.1 Release Notes {#enterprise-dashboard-v1-1-1}
**May 7, 2015** &mdash; Sensu Enterprise Dashboard version 1.1.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-1-1-changes}

- **IMPROVEMENT**: Collections now use the new backendService.postStash service.

## Enterprise Dashboard 1.1.0 Release Notes {#enterprise-dashboard-v1-1-0}
**May 5, 2015** &mdash; Sensu Enterprise Dashboard version 1.1.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-1-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.8.1][uchiwa-v0-8-1].

- **IMPROVEMENT**: Add GitHub auth driver.

- **IMPROVEMENT**: Add LDAP auth driver.

- **IMPROVEMENT**: Remove dashboard authentication by default.

## Enterprise Dashboard 1.0.0 Release Notes {#enterprise-dashboard-v1-0-0}
**April 8, 2015** &mdash; Sensu Enterprise Dashboard version 1.0.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v1-1-0-changes}

- **IMPROVEMENT**: Built on [Uchiwa 0.7.1][uchiwa-v0-7-1].

- **IMPROVEMENT**: Google fonts with Sensu Enterprise Dashboard.

- **IMPROVEMENT**: Set default SQL password to "sensu".

## Enterprise Dashboard 0.1.5 Release Notes {#enterprise-dashboard-v0-1-5}
**March 5, 2015** &mdash; Sensu Enterprise Dashboard version 0.1.5 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v0-1-5-changes}

- **IMPROVEMENT**: New Dockerfile with CentOS 6 base for compatibility

## Enterprise Dashboard 0.1.3 Release Notes {#enterprise-dashboard-v0-1-3}
**March 4, 2015** &mdash; Sensu Enterprise Dashboard version 0.1.3 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v0-1-3-changes}

- **IMPROVEMENT**: Config hash now supports "dashboard" instead of "uchiwa"

- **IMPROVEMENT**: Dashboard version constant now available

## Enterprise Dashboard 0.1.2 Release Notes {#enterprise-dashboard-v0-1-2}
**February 27, 2015** &mdash; Sensu Enterprise Dashboard version 0.1.2 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v0-1-2-changes}

- **IMPROVEMENT**: Renamed uchiwa-enterprise theme to sensu-enterprise.

- **IMPROVEMENT**: Changed favicon to Sensu logo.

- **FIX**: Fixed pre/post install and remove package scripts.

## Enterprise Dashboard 0.1.1 Release Notes {#enterprise-dashboard-v0-1-1}
**February 27, 2015** &mdash; Sensu Enterprise Dashboard version 0.1.1 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v0-1-1-changes}

- **FIX**: Fixed dashboard src content directory structure.

## Enterprise Dashboard 0.1.0 Release Notes {#enterprise-dashboard-v0-1-0}
**February 27, 2015** &mdash; Sensu Enterprise Dashboard version 0.1.0 has been released and is available for immediate download. 

### CHANGES {#enterprise-dashboard-v0-1-0-changes}

- **IMPROVEMENT?**: Building unstable packages for testing purposes.

[uchiwa-changelog]:  https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md
<!-- Uchiwa 6.0 -->
[uchiwa-v1-6-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#160-2019-02-27
<!-- Uchiwa 5.0 -->
[uchiwa-v1-5-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#150-2018-12-20
<!-- Uchiwa 4.1 -->
[uchiwa-v1-4-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#141-2018-12-14
<!-- Uchiwa 1.3 -->
[uchiwa-v1-3-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#131-2018-06-11
<!-- Uchiwa 1.1 -->
[uchiwa-v1-1-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#111-2018-01-10
[uchiwa-v1-1-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#110-2017-12-15
<!-- Uchiwa 0.26 -->
[uchiwa-v0-26-3]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0263-2017-10-05
[uchiwa-v0-26-2]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0262-2017-10-02
[uchiwa-v0-26-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0261-2017-09-29
<!-- Uchiwa 0.25 -->
[uchiwa-v0-25-3]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0253-2017-07-25
[uchiwa-v0-25-2]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0252-2017-05-16
[uchiwa-v0-25-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0251-2017-05-10
<!-- Uchiwa 0.24 -->
[uchiwa-v0-24-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0240-2017-04-13
<!-- Uchiwa 0.23 -->
[uchiwa-v0-23-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0231-2017-03-29
[uchiwa-v0-23-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0230-2017-03-24
<!-- Uchiwa 0.22 -->
[uchiwa-v0-22-2]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0222-2017-03-10
[uchiwa-v0-22-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0221-2017-02-06
<!-- Uchiwa 0.21 -->
[uchiwa-v0-21-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0210-2016-12-08
<!-- Uchiwa 0.20 -->
[uchiwa-v0-20-2]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0202-2016-11-21
<!-- Uchiwa 0.19 -->
[uchiwa-v0-19-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0190-2016-10-16
<!-- Uchiwa 0.17 -->
[uchiwa-v0-17-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0171-2016-08-02
[uchiwa-v0-17-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0170-2016-07-20
<!-- Uchiwa 0.16 -->
[uchiwa-v0-16-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0160-2016-06-23
<!-- Uchiwa 0.15 -->
[uchiwa-v0-15-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0150-2016-06-02
<!-- Uchiwa 0.14 -->
[uchiwa-v0-14-3]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0143-2016-03-03
[uchiwa-v0-14-2]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0142-2016-02-02
[uchiwa-v0-14-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0141-2016-01-15
<!-- Uchiwa 0.13 -->
[uchiwa-v0-13-0]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0130-2015-11-22
<!-- Uchiwa 0.12 -->
[uchiwa-v0-12-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0121-2015-11-05
<!-- Uchiwa 0.11 -->
[uchiwa-v0-11-2]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0112-2015-10-04
<!-- Uchiwa 0.10 -->
[uchiwa-v0-10-4]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0104-2015-09-01
[uchiwa-v0-10-3]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#0103-2015-08-03
<!-- Uchiwa 0.9 -->
[uchiwa-v0-9-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#091-2015-06-10
<!-- Uchiwa 0.8 -->
[uchiwa-v0-8-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#081-2015-05-05
<!-- Uchiwa 0.7 -->
[uchiwa-v0-7-1]: https://github.com/sensu/uchiwa/blob/master/CHANGELOG.md#071-2015-04-01
